# aarch32-emulator

./: .gitignore  CMakeLists.txt  README.md  cli-main.cpp  cpu.cpp  cpu.h  cpu_ee.cpp  cpu_ee.h  decode_instruction.cpp  emulator_ui.cpp  emulator_ui.h  instruction.h  main.cpp  memory.cpp  memory.h  mmio.cpp  mmio.h  ui-main.cpp  ui_renderer.cpp  ui_renderer.h
.github/workflows/: cmake-multi-platform.yml  release.yml
examples/: create_echo_program.py  create_echo_programs.py
include/: CMakeLists.txt
include/interface/: CMakeLists.txt  emulator_ui.h  ui_renderer.h
include/runtime/: CMakeLists.txt  CPU.hpp  ExecutionEngine.hpp  Instruction.hpp  MemoryMappedIO.hpp  cpu.h  mmio.h
src/: CMakeLists.txt  CPU.cpp  ExecutionEngine.cpp  InstructionDecoding.cpp  Memory.cpp  MemoryMappedIO.cpp  cli-main.cpp  cpu_ee.cpp  disasm-main.cpp  emulator_ui.cpp  ui-main.cpp  ui_renderer.cpp
tests/: cpu.cpp  cpu_ee.cpp  decode_instruction.cpp  memory.cpp  mmio.cpp
